src/App.css
@import url('https://fonts.googleapis.com/css?family=Nunito:regular,600');
@import "variables.css";

html {
  background: var(--background-color); 
}
body {
  color: var(--primary-text-color);  
  font-family: "nunito";
  font-size: 100%;
}
.transitionBgColor {
  transition: background-color 0.3s ease-in-out; 
}

.appLoading {
  justify-content: center;
  align-items: center;
  height: 100vh;
  display: flex;
}

a {
  color: var(--primary-text-color);
}

.App {
  flex-direction: row;
  color: var(--primary-text-color);
  padding: 1%;
  display: flex;
  flex-direction: column;
}
.errorMsg {
  text-align: center;
  margin: auto;
  font-size: 16px;
  padding: 16px;
}

.ghostCard{
  opacity: 0.3;
}
.cardLoading{
  display: flex;
  justify-content: center;
  min-height: 240px;
  align-items: center;
}
.loadingIcon {
  color: var(--app-name-text-color)
}
.AppHeader {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
  height:86px;
  margin-bottom: 12px;
}

.AppFooter {
  flex: 0 0 auto;
  flex-direction: row;
  text-align: right;
  margin-top: 12px;
}
.AppFooter .linkItem {
  font-size: 12px;
  color: var(--primary-text-color);
  text-decoration: none;
  text-transform: uppercase;
  margin-right: 12px;
  cursor: pointer;
  display: inline-flex;
  vertical-align: middle
}
.linkItemIcon {
  margin-right: 4px;
}
.linkItem :hover {
  color: var(--primary-hover-text-color);
}

.AppContent {
  flex: 1 1 auto;
  display: flex;
  gap: 12px;
  position: relative;
  overflow:hidden;
  padding-bottom: 12px;
}
.extras {

  flex-direction: row;
  margin-right: 16px;
  align-content: center;

  transition: width, left, right, 0.3s;
}
.darkModeBtn {
  background-color: var(--dark-mode-background-color) !important;
  color: var(--dark-mode-text-color) !important;
}
.extraBtn {
  background-color: var(--button-background-color);
  color: var(--button-text-color);
  margin-left: 8px;
  height:40px;
  width: 40px;
  line-height: 44px;
  font-size: 18px;
  text-align: center;
  border: 0;
  border-radius: 20px;
  outline: none;
  cursor: pointer;
  position: relative;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}
.extraTextBtn {
  padding: 0 16px;
  width: auto;
  min-width: 40px;
  font-weight: bold;
}
.extraTextBtnIcon {
  margin-right: 4px;
  transition: color 400ms,transform .1s;
}
.extraTextBtn:hover .extraTextBtnIcon {
  color: red;
  transform: scale(1.2);
}

.badgeCount {
  width: 20px;
  height: 20px;
  background: #ef0808;
  border-radius: 100px;
  font-size: 13px;
  font-weight: 500;
  display: block;
  line-height: 20px;
  color: white;
  position: absolute;
  right: -4px;
  bottom: -6px;
}

.AppName{
  color: var(--app-name-text-color);
  text-align: left;
}

.logo {
  position: relative;
  top: 4px;
  margin-right: 4px;
  font-size: 24px;
}
.logoText {
  height: 16px;
  width: auto;
  fill: var(--app-name-text-color)
}
.cards {
  display:flex;
  align-items: flex-start;
  flex-direction: row;
  flex-wrap: wrap;

}

.block {
  background-color: var(--card-background-color);
  border-radius: 10px;
  overflow: hidden;
  flex-direction: column;
  height: 80vh;
  width: 10vw;
  flex: 0 0 auto;
}
.blockContent {
  flex-grow: 1;
  overflow-y: auto;
  height: calc(80vh - 1% - 16px - 30px);
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}

.scrollable {
  scrollbar-color: var(--scrollbar-accent-color) var(--scrollbar-background-color);
  scrollbar-width: thin;
}

.scrollable::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

.scrollable::-webkit-scrollbar-track-piece  {
  background-color: var(--scrollbar-background-color);
}

.scrollable::-webkit-scrollbar-thumb:vertical {
  border-radius: 6px;
  background-color: var(--scrollbar-accent-color);
}

.scrollable::-webkit-scrollbar-thumb:horizontal {
  border-radius: 6px;
  background-color: var(--scrollbar-accent-color);
}

.dark .block{
  border: 1px solid var(--card-border-color);
}
.light .block {
  box-shadow: 0 0 20px var(--card-border-color);
}

.blockHeader {
  text-align: center;
  vertical-align: baseline;
  background: var(--card-header-background-color);
  color: var(--card-header-text-color);
  font-weight: 400;
  height: 30px;
  font-size: 18px;
  padding-top: 16px;
  padding-bottom: 16px;
  cursor: pointer;
}
.blockHeader:hover .blockHeaderLink{
  opacity: 1;
}
.blockHeaderLink {
  display: inline-block;
  margin-left: 8px;
  color: #96a2ae;
  vertical-align: middle;
  opacity: 0;
  transition:opacity 0.2s linear;
}
.blockHeaderIcon {
  position: relative;
  top: 4px;
  margin-right: 6px;
}
.blockHeaderIcon img {
  width: 18px;
  height: 18px;
}

.blockRow {
  padding: 8px 16px;
  position: relative;
}

/* Actions */
.blockActions {
  position: absolute;
  transition: right .2s ease;
  top:0;
  right :-100%;
  background: linear-gradient(to right, transparent, var(--card-actions-background-shadow));
  height: 100%;
  width: 26%;
  justify-content: flex-end;
  align-items: flex-end;
  display: flex;
}
.blockActions.active {
  right:0;
}

.blockRow:hover .blockActions {
  right:0;
}
.blockActionButton.active {
  background-color: var(--card-active-action-button-background);
  color: var(--card-active-action-button-color);
}
.blockActionButton {
  margin: 16px;
  width: 28px;
  height: 28px;
  border: none;
  border-radius: 40px;
  display: block;
  text-align: center;
  background-color: var(--card-action-button-background);
  color: var(--card-action-button-color);
  line-height: 12px;
  cursor: pointer;
  padding: 0;
}


.blockRow:hover {
  background-color: var(--card-background-focus-color);
}

.bookmarkBtnWrapper {
  display: flex;
  align-items: center;
  padding-left: 4;
  padding-right: 4;
}

.bookmarkBtn {
  /* visibility: hidden; */
  cursor: pointer;
}

.bookmarkBtn.active {
  color: #3572a5
}


.blockRow:hover .bookmarkBtn {
  visibility: visible;
}
/* ... */

